[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/testing_screen.gd" id="1"]
[ext_resource type="Script" path="res://scripts/starfield.gd" id="2"]

[node name="TestingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="Starfield" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBox/HeaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HeaderVBox" type="VBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ROCKET TESTING"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Test and fix hidden flaws before launch"
horizontal_alignment = 1

[node name="DesignInfo" type="HBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox"]
layout_mode = 2
alignment = 1

[node name="DesignName" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderVBox/DesignInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Design: Default Rocket"

[node name="ContentHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="TestsPanel" type="PanelContainer" parent="MarginContainer/VBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="TestsMargin" type="MarginContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TestsVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TestsTitle" type="Label" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "TESTING"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox"]
layout_mode = 2

[node name="EngineTestsContainer" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RocketTestPanel" type="PanelContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox"]
layout_mode = 2

[node name="RocketTestMargin" type="MarginContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="RocketTestVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel/RocketTestMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RocketTestTitle" type="Label" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel/RocketTestMargin/RocketTestVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Rocket Test"
horizontal_alignment = 1

[node name="RocketTestDesc" type="Label" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel/RocketTestMargin/RocketTestVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Tests structural and design integrity"
horizontal_alignment = 1

[node name="RocketTestCost" type="Label" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel/RocketTestMargin/RocketTestVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Cost: $5,000,000"
horizontal_alignment = 1

[node name="RocketTestButton" type="Button" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel/RocketTestMargin/RocketTestVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 16
text = "RUN ROCKET TEST"

[node name="Spacer" type="Control" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsPanel" type="PanelContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox"]
layout_mode = 2

[node name="StatsMargin" type="MarginContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/StatsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="StatsVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/StatsPanel/StatsMargin"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="UnknownLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/StatsPanel/StatsMargin/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Unknown issues: ~5"

[node name="SuccessLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/StatsPanel/StatsMargin/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Est. success rate: 25%"

[node name="FlawsPanel" type="PanelContainer" parent="MarginContainer/VBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="FlawsMargin" type="MarginContainer" parent="MarginContainer/VBox/ContentHBox/FlawsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="FlawsVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FlawsTitle" type="Label" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin/FlawsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "DISCOVERED ISSUES"
horizontal_alignment = 1

[node name="FlawsSubtitle" type="Label" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin/FlawsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Fix issues to improve reliability"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin/FlawsVBox"]
layout_mode = 2

[node name="FlawsScroll" type="ScrollContainer" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin/FlawsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="FlawsList" type="VBoxContainer" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin/FlawsVBox/FlawsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TestResultLabel" type="Label" parent="MarginContainer/VBox/ContentHBox/FlawsPanel/FlawsMargin/FlawsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.3, 1)
text = ""
horizontal_alignment = 1

[node name="FooterPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="FooterMargin" type="MarginContainer" parent="MarginContainer/VBox/FooterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="ButtonsHBox" type="HBoxContainer" parent="MarginContainer/VBox/FooterPanel/FooterMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "BACK TO DESIGN"

[node name="LaunchButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/ButtonsHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 20
text = "PROCEED TO LAUNCH"

[connection signal="pressed" from="MarginContainer/VBox/ContentHBox/TestsPanel/TestsMargin/TestsVBox/RocketTestPanel/RocketTestMargin/RocketTestVBox/RocketTestButton" to="." method="_on_rocket_test_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/ButtonsHBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/ButtonsHBox/LaunchButton" to="." method="_on_launch_button_pressed"]
